<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tumblr.leirali.stockquotes_martinez.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterSymbol"
        android:layout_alignBottom="@+id/infoEditText"
        android:id="@+id/enterSymbolTextView"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/symbolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoEditText"
        android:layout_marginBottom="10dp"
        android:text="@string/symbol"
        android:textStyle="bold" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/symbolTextView"
        android:layout_alignLeft="@id/infoEditText"
        android:id="@+id/outputTextView1" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/nameTextView"
        android:layout_alignLeft="@id/infoEditText"
        android:id="@+id/outputTextView2" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tradePriceTextView"
        android:layout_alignLeft="@id/infoEditText"
        android:id="@+id/outputTextView3" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tradeTimeTextView"
        android:layout_alignLeft="@id/infoEditText"
        android:id="@+id/outputTextView4" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/changeTextView"
        android:layout_alignLeft="@id/infoEditText"
        android:id="@+id/outputTextView5" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/weekTextView"
        android:layout_alignLeft="@id/infoEditText"
        android:id="@+id/outputTextView6" />

    <TextView
        android:id="@+id/tradePriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:layout_marginBottom="10dp"
        android:text="@string/tradePrice"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/symbolTextView"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tradeTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tradePriceTextView"
        android:layout_marginBottom="10dp"
        android:text="@string/tradeTime"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/changeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tradeTimeTextView"
        android:text="@string/change"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weekTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/changeTextView"
        android:layout_marginTop="10dp"
        android:text="@string/range"
        android:textStyle="bold" />

    <Button
        android:text="@string/getInfo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/getInfoButton"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoEditText"
        android:hint="@string/hint"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
